# dhlco2_co2_artifact

./: .env.example  .gitignore  KAUFFMAN_ROADMAP.md  NEXT_STEPS.md  README.md  ROADMAP.md  pyproject.toml
ci/: ci.local.yaml  promote_from_staging.py  promotion_allowlist.yaml  validate_and_export.py  validate_and_export.sh
dashboard/: README.md  app.py  data_helpers.py
data/: assumptions_proxies.yaml  carbon_benchmarks.yaml  demo_scenarios.yaml  green_gates.yaml  hardware_configs.yaml  hardware_inventory_template.yaml  kpi_process_mapping.yaml  kpis.yaml  lifecycle_mapping.yaml  phase2_pilot_defaults.yaml  promotion_registry.yaml
docs/: 2026-07-15_entsoe_live_verification_handoff.md  ads_demo_runbook.md  demo_scenario_matrix.md  enterprise_simulation_roadmap.md  functional_units_r_candidates.md  hardware_pcf_inventory_notes.md  kpi_measurement_approach_notes.md  measurement_tooling_roadmap.md  phase1_scope.md  phase2_best_practices.md  phase2_design_principles.md  phase2_instrumentation_backlog.md  phase2_kpi_to_process_mapping.md  phase2_process_integration_model.md  phase2_rdc_gap_analysis.md  phase2_tier0_pilot_setup.md  phase3_data_source_roadmap.md  phase3_simulation_concept.md  project_one_pager.md  sci_deep_dive_onepager.md
evidence/: SIMULATION_EVIDENCE_LEDGER.md  cross_repo_benchmark.yaml  simulation_runs.jsonl
exports/: Gap_Report.md  KPI_Catalog.csv  KPI_Catalog.md  Lifecycle_Mapping.md
generators/: build_exports.py  carbon_benchmarks.py  decision_support.py  demo_scenarios.py  entsoe_grid_carbon.py  evidence_ledger.py  green_gates.py  rdc_pareto.py  (+3 more)
(+21 files in other folders)
