[project]
name = "dhlco2-co2-artifact"
version = "0.1.0"
description = "DHL CO2/cost/energy KPI framework and hardware decision simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adaptive-decision-kernel>=0.1.0,<1.0.0",
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
adaptive-decision-kernel = { path = "../adaptive_decision_kernel", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
